# uk-energy-system-2050

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  todo.md
.github/: copilot-instructions.md  renovate.json
.github/workflows/: lint.yaml  test.yaml
data/: Dataset_SE.dta
data/__MACOSX/ERA5_data_1950-2020/: ._solar_power_capacity_factor
nbs/: Best_senario.ipynb  Cost_Update.ipynb  Dunkeflaute.ipynb  ERW Final.ipynb  Electricity Cost Final.ipynb  Gas_capacity_factor.ipynb  Gas_techs.ipynb  Gas_techs_update.ipynb  Scenarios-CCS-H2.ipynb  Untitled-1.ipynb  Wind_Reader.ipynb  dev.ipynb  full_output.html  no_h2_power_system_demo.ipynb  reliability testing.ipynb  system_boundary_schematic.ipynb
src/: __init__.py  assumptions.py  costs.py  demand_model.py  energy_costs.py  matplotlib_style.py  ninja_2025_wind_plots.py  power_system.py  power_system_core.py  power_system_core_no_h2.py  power_system_no_h2.py  scenarios.py  supply_model.py  units.py  utils.py
src/data/: README.md  cb7.py  era5.py  historical_demand.py  ninja_2025_capacity_factors.py  renewable_capacity_factors.py  scrape_gas_demand.py
src/data/__MACOSX/: ._ERA5_data_1950-2020
tests/: config.py  test_assumptions.py  test_costs.py  test_demand_model.py  test_energy_costs.py  test_power_system.py  test_power_system_no_h2.py  test_supply_model.py  test_utils.py
tests/data/: test_cb7.py  test_era5.py  test_historical_demand.py  test_renewable_capacity_factors.py  test_scrape_gas_demand.py
tools/: inject_savefig_preamble.py
